@@ -16,6 +16,7 @@ NEWS
   * Trust pcre-config, do not check for pcre manually (#1769)
   * Fix fastcgi authorization in subdirectories with check-local=disabled; don't split pathinfo for authorizer. (#963)
   * Add possibility to disable methods in mod_compress (#1773)
+  * Fix duplicate connection keep-alive/transfer-encoding headers (#960)
 
 - 1.4.20 - 2008-09-30
 
